# ai_stock_analysis

./: .gitignore  pyproject.toml  stock_analysis_report.md
src/stockbot/: crew.py  main.py
src/stockbot/config/: agents.yaml  tasks.yaml
