[project]
name = "stockbot"
version = "0.1.0"
description = "stockbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
stockbot = "stockbot.main:run"
run_crew = "stockbot.main:run"
train = "stockbot.main:train"
replay = "stockbot.main:replay"
test = "stockbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
